--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,7 +1,12 @@
 <div class="profile-content">
   <%= form_for @user, html: { multipart: true } do |f| %>
   <div class="prof-image">
-  	<%= image_tag @user.prof_image.thumb.url, size:'50x50' %>
+  <% if @user.image? %>
+    <%= image_tag @user.image.url %>
+  <% else %>
+    <%= image_tag("/images/defaulu.png") %>
+  <% end %>
+  	<%#= image_tag @user.prof_image.thumb.url, size:'50x50' %>
     <%= f.file_field :prof_image id: :user_img %>
     <%= f.hidden_field :prof_image_cache %>
   </div>
