--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,73 @@
   </head>
 
   <body>
+    <header class="navbar navbar-fixed-top navbar-inverse" >
+      <div class="container">
+        <nav class="navbar navbar-nav navbar-left">
+          <span class="Simic">Simic</span>
+        </nav>
+
+        <nav id="slidemenu">
+            <ul class="nav navbar-nav navbar-right">
+              <% if user_signed_in? %>
+                <li class="">
+                  <%= link_to comics_path(current_user),class: 'btn btn-light' do %>
+                    <span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home
+                  <% end %>
+                </li>
+                <li class="">
+                  <%= link_to users_path, class: 'btn btn-light' do %>
+                    <span class="glyphicon glyphicon-user" aria-hidden="true"></span> Users
+                  <% end %>
+                </li>
+                <li class="">
+                  <%= link_to comics_path,class: 'btn btn-light' do %>
+                    <span class="glyphicon glyphicon-book" aria-hidden="true"></span> Books
+                  <% end %>
+                </li>
+                <li class="">
+                  <%= link_to destroy_user_session_path, method: :delete, class: 'btn btn-light' do %>
+                    <span class="glyphicon glyphicon-log-out" aria-hidden="true"></span> logout
+                  <% end %>
+                </li>
+              <% else %>
+                <li class="">
+                  <%= link_to users_path,class: 'btn btn-light' do %>
+                  <span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home
+                  <% end %>
+                </li>
+                <li class="">
+                  <%= link_to users_path, class: 'btn btn-light' do %>
+                    <span class="glyphicon glyphicon-link" aria-hidden="true"></span> About
+                  <% end %>
+                </li>
+                <li class="">
+                  <%= link_to new_user_registration_path, class: 'btn btn-light' do %>
+                    <span class="glyphicon glyphicon-edit" aria-hidden="true"></span> sign up
+                  <% end %>
+                </li>
+                <li class="">
+                  <%= link_to new_user_session_path, class: 'btn btn-light' do %>
+                    <span class="glyphicon glyphicon-log-in" aria-hidden="true"></span> login
+                  <% end %>
+                </li>
+              <% end %>
+            </ul>
+        </nav>
+      </div>
+    </header>
+
     <%= yield %>
+
+   <footer class="footer style-2">
+      <div class="container">
+        <div class="row">
+          <div class="col-xs-3 col-xs-offset-9">
+              <p>CopyRight Infratop.inc</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+
   </body>
 </html>
