[Add] Font Awesomeを導入

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,16 @@
  */
 
  @import "bootstrap";
+ @import "font-awesome";
+
+
+
+body {
+  padding-top: 80px;
+}
+
+.fixed-top {
+  height:　40px;
+  line-height: 40px;
+}
+
