--- a/app/views/comics/show.html.erb
+++ b/app/views/comics/show.html.erb
@@ -26,19 +26,20 @@
 </p>
 
 <% @comic.reviews.each do |f| %>
-  <div class="tag-content">
-    <% f.tag_list.each do |tag| %>
-      <span class="label label-primary"><%= tag %></span>
-    <% end %>
-  </div>
   <div class="review-text">
     <div class="review-author clearfix">
-        <%= link_to f.user.nickname, user_path(@user.id)  %></a>
-        <span class="review-meta">
-          <span class="review-date"><%= f.created_at.strftime('%Y/%m/%d') %></span>
-        </span>
+      <%= link_to f.user.nickname, user_path(@user.id) %>
+      <span class="review-meta">
+        <span class="review-date"><%= f.created_at.strftime('%Y/%m/%d') %></span>
+      </span>
     </div>
-    <div class="review-entry"><%= f.review_text %>
+    <div class="tag-content">
+      <% f.tag_list.each do |tag| %>
+        <span class="label label-primary"><%= tag %></span>
+      <% end %>
+    </div>
+    <div class="review-entry">
+      <%= f.review_text %>
     </div>
   </div>
 <% end %>
