--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,7 @@
 
     <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+    <link href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" rel="stylesheet">
   </head>
 
   <body>
@@ -22,6 +23,7 @@
               <% if user_signed_in? %>
                 <li class="">
                   <%= link_to comics_path(current_user),class: 'btn btn-light' do %>
+                    <%= fa_icon ("home") %>
                     <span class="glyphicon glyphicon-home" aria-hidden="true"></span> Home
                   <% end %>
                 </li>
