--- a/app/views/comics/show.html.erb
+++ b/app/views/comics/show.html.erb
@@ -44,20 +44,37 @@
   </div>
 <% end %>
 
-<% if @user.id==current_user.id %>
-  <%= form_for [@comic,@reviewnew] do |f| %>
-    <div class="row">
-      <div class="col-sm-12">
-        <div class="field form-group form-group-lg">
-          <%= f.label :tag_list, 'タグをカンマ(,)区切りで入力してください', class: "sr-only control-label" %>
-          <%= text_field_tag 'tag_list', f.object.tag_list.join(","), class: "form-control" %>
-        </div>
-          <%= f.text_area :review_text, rows:'5', class: "form-control",placeholder: "レビューをここに" %>
-      </div>
-    </div>
-    <%= f.submit "送信する", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
-  <% end %>
-<% end %>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+  投稿削除
+</button>
+<%= link_to "投稿削除",comic_path(@comic), method: :delete, "data-confirm" => "本当に削除しますか？" %>
+<%= link_to '一覧へ', comics_path %>
 
-<%= link_to 'Edit', edit_comic_path(@comic) %> |
-<%= link_to 'Back', comics_path %>
+
+<!-- モーダルの設定 -->
+<div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
+  <div class="modal-dialog modal-sm" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h6 class="modal-title" id="exampleModalLabel">投稿削除</h6>
+        <button type="button" class="close" data-dismiss="modal" aria-label="閉じる">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body"></br>
+        <p>本当に削除しますか？</p>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-sm btn-secondary" data-dismiss="modal">キャンセル</button>
+          <%= link_to "投稿削除",comic_path(@comic), method: :delete, class: "btn btn-sm btn-danger" %>
+      </div><!-- /.modal-footer -->
+    </div><!-- /.modal-content -->
+  </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+<style>
+  .modal-body p {
+  font-size: 13px;
+  text-align: center;
+  }
+</style>
