--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -1,5 +1,45 @@
 <h1>New Review</h1>
 
-<%= render 'form', review: @review %>
+<p id="notice"><%= notice %></p>
 
-<%= link_to 'Back', reviews_path %>
+<p>
+  <strong>Author:</strong>
+  <%= @comic.author%>
+</p>
+
+<p>
+  <strong>Publisher:</strong>
+  <%= @comic.publisher %>
+</p>
+
+
+<p>
+  <strong>Title:</strong>
+  <%= @comic.title %>
+</p>
+
+<p>
+  <strong>Cover_img:</strong>
+  <% if @comic.cover_img? %>
+    <%= image_tag @comic.cover_img %>
+  <% else %>
+    <%= image_tag ("/images/defaultcomic.png") %>
+  <% end %>
+</p>
+
+<% if @user.id==current_user.id %>
+  <%= form_for [@comic,@review] do |f| %>
+    <div class="row">
+      <div class="col-sm-12">
+        <div class="field form-group form-group-lg">
+          <p> タグをカンマ(,)区切りで入力してください </p>
+          <%= text_field_tag 'tag_list', f.object.tag_list.join(","), class: "form-control",placeholder: "タグをカンマ(,)区切りで入力してください" %>
+        </div>
+          <%= f.text_area :review_text, rows:'5', class: "form-control",placeholder: "レビューをここに" %>
+      </div>
+    </div>
+    <%= f.submit "送信する", class: "btn btn-lg btn-base-1 mt-20 pull-right" %>
+  <% end %>
+<% end %>
+
+<%= link_to 'Back', comics_path %>
