--- a/app/views/comics/index.html.erb
+++ b/app/views/comics/index.html.erb
@@ -1,32 +1,23 @@
-<p id="notice"><%= notice %></p>
 
 <h1>Comics</h1>
 
-<table>
-  <thead>
-    <tr>
-      <th>Author</th>
-      <th>Publisher</th>
-      <th>Labels</th>
-      <th>Genre</th>
-      <th>Title</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
 
-  <tbody>
-    <% @comics.each do |comic| %>
-      <tr>
-        <td><%= comic.author %></td>
-        <td><%= comic.publisher %></td>
-        <td><%= comic.title %></td>
-        <td><%= link_to 'Show', comic %></td>
-        <td><%= link_to 'Edit', edit_comic_path(comic) %></td>
-        <td><%= link_to 'Destroy', comic, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
+  <% @comics.each do |comic| %>
+    <%= link_to comic_path(comic) do %>
+      <% if comic.cover_img.present? %>
+        <%= image_tag comic.cover_img %>
+      <% else %>
+        <%= image_tag ("defaultcomic.png"), :size => '150x150' %>
+      <% end %>
     <% end %>
-  </tbody>
-</table>
+    <p><%= comic.title %></p>
+    <p><%= comic.author %></p>
+    <p><%= comic.publisher %></p>
+    <p class="label label-primary"><%= comic.review.tag_list %></p>
+
+  <% end %>
+
+<%= paginate @comics, class: "paginate" %>
 
 <br>
 
