--- a/app/views/comics/show.html.erb
+++ b/app/views/comics/show.html.erb
@@ -1,4 +1,3 @@
-<p id="notice"><%= notice %></p>
 
 <p>
   <strong>Author:</strong>
@@ -25,30 +24,25 @@
   <% end %>
 </p>
 
-<% @comic.reviews.each do |f| %>
   <div class="review-text">
     <div class="review-author clearfix">
-      <%= link_to f.user.nickname, user_path(@user.id) %>
+      <%= link_to @comic.review.user.nickname, user_path(@user.id) %>
       <span class="review-meta">
-        <span class="review-date"><%= f.created_at.strftime('%Y/%m/%d') %></span>
+        <span class="review-date"><%= @comic.review.created_at.strftime('%Y/%m/%d') %></span>
       </span>
     </div>
     <div class="tag-content">
-      <% f.tag_list.each do |tag| %>
-        <span class="label label-primary"><%= tag %></span>
-      <% end %>
+        <span class="label label-primary"><%= @comic.review.tag_list %></span>
     </div>
     <div class="review-entry">
-      <%= f.review_text %>
+      <%= @comic.review.review_text %>
     </div>
   </div>
-<% end %>
 
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
+<button type="button" class="btn btn-sm btn-danger" data-toggle="modal" data-target="#myModal">
   投稿削除
 </button>
-<%= link_to "投稿削除",comic_path(@comic), method: :delete, "data-confirm" => "本当に削除しますか？" %>
-<%= link_to '一覧へ', comics_path %>
+<%= link_to '一覧へ', comics_path, class: "btn btn-sm btn-outline-primary" %>
 
 
 <!-- モーダルの設定 -->
