--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,13 +18,20 @@
           <span class="Simic">Simic</span>
         </nav>
 
+<div class="search-box">
+    <%= form_tag(comics_path,method: :get) do %>
+        <%= text_field_tag :search, "", placeholder: "みんなの目標を検索" %>
+        <%= button_tag '<i class="fa fa-search"></i>'.html_safe, type: 'submit', :name => nil %>
+    <% end %>
+</div>
+
         <div class=”form-group”>
-          <%= form_tag(search_comics_path, method: :'get') do %>
-            <%= text_field_tag :search %>
+          <%#= form_tag("/comics/result", method: :'get') do %>
+            <%#= text_field_tag :search, nil, :placeholder => "" %>
             <span class="form-group-btn">
-              <%= submit_tag '検索', :name => nil, class: "btn btn-sm search-btn" %>
+              <%#= submit_tag '検索', :name => nil, class: "btn btn-sm search-btn" %>
             </span>
-          <% end %>
+          <%# end %>
         </div>
 
         <nav id="slidemenu">
