--- a/app/views/comics/index.html.erb
+++ b/app/views/comics/index.html.erb
@@ -10,6 +10,14 @@
         <%= image_tag ("defaultcomic.png"), :size => '150x150' %>
       <% end %>
     <% end %>
+    <div id="star-rate-<%= comic.review.id %>"></div>
+      <script>
+      $('#star-rate-<%= comic.review.id %>').raty({
+        path: '/assets',
+        readOnly: true,
+        score: <%= comic.review.star %>,
+      });
+      </script>
     <p><%= comic.title %></p>
     <p><%= comic.author %></p>
     <p><%= comic.publisher %></p>
