--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -23,7 +23,7 @@
   <% if @comic.cover_img? %>
     <%= image_tag @comic.cover_img %>
   <% else %>
-    <%= image_tag ("/images/defaultcomic.png") %>
+    <%= image_tag ("defaultcomic.png"), :size => '150x150' %>
   <% end %>
 </p>
 
@@ -32,9 +32,10 @@
     <div class="row">
       <div class="col-sm-12">
         <div class="field form-group form-group-lg">
+          <%= f.hidden_field :star, id: :comic_rating %>
+          <div id="stars"></div>
           <p> タグをカンマ(,)区切りで入力してください </p>
           <%= text_field_tag 'tag_list', f.object.tag_list.join(","), class: "form-control",placeholder: "タグをカンマ(,)区切りで入力してください" %>
-        </div>
           <%= f.text_area :review_text, rows:'5', class: "form-control",placeholder: "レビューをここに" %>
       </div>
     </div>
@@ -43,3 +44,10 @@
 <% end %>
 
 <%= link_to 'Back', comics_path %>
+
+<script type="text/javascript">
+  $("#stars").raty({
+    path: '/assets',
+    scoreName: 'review[star]',
+  });
+</script>
