--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,6 +18,29 @@
   </button>
   <% end %>
 
+  <% @comics.each do |comic| %>
+    <%= link_to comic_path(comic) do %>
+      <% if comic.cover_img.present? %>
+        <%= image_tag comic.cover_img %>
+      <% else %>
+        <%= image_tag ("defaultcomic.png"), :size => '150x150' %>
+      <% end %>
+    <% end %>
+    <div id="star-rate-<%= comic.review.id %>"></div>
+      <script>
+      $('#star-rate-<%= comic.review.id %>').raty({
+        path: '/assets',
+        readOnly: true,
+        score: <%= comic.review.star %>,
+      });
+      </script>
+    <p><%= comic.title %></p>
+    <p><%= comic.author %></p>
+    <p><%= comic.publisher %></p>
+    <p class="label label-primary"><%= comic.review.tag_list %></p>
+
+  <% end %>
+
 
 <!-- モーダルの設定 -->
 <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
