--- a/app/views/comics/new.html.erb
+++ b/app/views/comics/new.html.erb
@@ -1,9 +1,9 @@
 
 <div class=”form-group”>
   <%= form_tag(search_comics_path, method: :'get') do %>
-    <%= text_field_tag :search %>
+    <%= text_field_tag :search, "", placeholder: "タイトルで検索", :size=>"30" %>
     <span class="form-group-btn">
-      <%= submit_tag '検索', :name => nil, class: "btn btn-default search-btn" %>
+      <%= button_tag '<i class="fa fa-search"></i>'.html_safe, type: 'submit', :name => nil %>
     </span>
   <% end %>
 </div>
